--- a/assets/css/matches.css
+++ b/assets/css/matches.css
@@ -16,7 +16,7 @@ body {
   color: var(--light-color);
   margin: 0;
   padding-top: var(--header-height);
-  color: var(--text-black);
+  color: var(--text-white);
 }
 
 .matches-main {
@@ -178,15 +178,17 @@ body {
 }
 
 .match-info {
+  color: var(--primary-white);
   display: flex;
   justify-content: space-between;
   font-size: 0.9rem;
-  color: #555;
+  background: var(--glass-effect);
 }
 
 .match-info i {
   margin-left: 5px;
   color: var(--primary-white);
+  background: var(--glass-effect);
 }
 
 /* تنسيق المباريات المنقولة */
@@ -231,7 +233,7 @@ body {
 .match-time {
   text-align: center;
   margin-bottom: 10px;
-  color: #555;
+  color: var(--primary-white);
 }
 
 .watch-btn {
