--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -45,17 +45,20 @@ body {
   display: flex;
   align-items: center;
   gap: 10px;
+  color: var(--primary-white);
 }
 
 .header .logo img {
     height: 100px;
   width: 100px;
+  color: var(--primary-white);
+  background: var(--glass-effect);
 }
 
 
 
 .header .logo h1 {
-  color: var(--text-white);
+  color: var(--primary-white);
   margin: 0;
   font-size: 1.1rem;
   text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
@@ -129,10 +132,11 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 15px;
+  color: var(--text-white)
 }
 
 .section-title {
-  color: var(--text-white)
+  color: var(--primary-white)
   font-size: 1.5rem;
   margin: 0;
   display: flex;
