--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -16,7 +16,7 @@ body {
   color: var(--light-color);
   margin: 0;
   padding-top: var(--header-height);
-  color: var(--text-black);
+  color: var(--text-white);
 }
 
 .matches-main {
@@ -69,6 +69,8 @@ body {
   margin: 0;
   padding: 0;
   list-style: none;
+    color: var(--text-white);
+
 }
 
 .nav ul li a {
@@ -87,7 +89,7 @@ body {
 
 .menu-toggle {
   display: none;
-  color: var(--text-white);
+  color: var(--primary-white);
   font-size: 1.5rem;
   cursor: pointer;
 }
@@ -135,7 +137,7 @@ body {
 }
 
 .section-title {
-  color: var(--text-white)
+  color: var(--primary-white)
   font-size: 1.5rem;
   margin: 0;
   display: flex;
@@ -144,7 +146,7 @@ body {
 }
 
 .view-all {
-  color: var(--text-white);
+  color: var(--primary-white);
   text-decoration: none;
   display: flex;
   align-items: center;
