--- a/assets/css/watch.css
+++ b/assets/css/watch.css
@@ -46,10 +46,9 @@ body {
 }
 
 .header .logo img {
-  height: 50px;
+  height: 90px;
   width: auto;
   filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.4));
-  background: var(--glass-effect);
 }
 
 .header .logo h1 {
@@ -146,7 +145,8 @@ body {
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
   border: 1px solid rgba(255, 255, 255, 0.1);
   text-align: center;
-  height: 300px;
+  height: 150px; /* تغيير القيمة كما تريد */
+  overflow: auto; /* لتمكين التمرير إذا تجاوز المحتوى الارتفاع */
 }
 
 .league-info {
