--- a/assets/css/watch.css
+++ b/assets/css/watch.css
@@ -145,8 +145,9 @@ body {
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
   border: 1px solid rgba(255, 255, 255, 0.1);
   text-align: center;
-  height: 150px; /* تغيير القيمة كما تريد */
-  overflow: auto; /* لتمكين التمرير إذا تجاوز المحتوى الارتفاع */
+   height: 23vh; /* 50% من ارتفاع الشاشة */
+  min-height: 100px; /* حد أدنى لضمان عدم تصغير الشاشة جدًا */
+}
 }
 
 .league-info {
