--- a/assets/css/watch.css
+++ b/assets/css/watch.css
@@ -193,7 +193,7 @@ body {
 .team img {
   height: 70px;
   width: auto;
-  margin-bottom: 10px;
+  margin-bottom: auto;
   object-fit: contain;
 }
 
@@ -201,14 +201,14 @@ body {
   font-size: 1.5rem;
   font-weight: bold;
   color: var(--secondary-color);
-  margin: 0 15px;
+  margin: 0 auto
 }
 
 .match-meta {
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin-top: 15px;
+  margin-top: auto;
 }
 
 .match-meta p {
