--- a/assets/css/watch.css
+++ b/assets/css/watch.css
@@ -417,6 +417,8 @@ body {
   .video-container {
     border-radius: 8px;
     background: var(--dark-color);
+     width: 100%;
+     aspect-ratio: 16/9;
   }
   
   .live-stream {
