--- a/assets/css/watch.css
+++ b/assets/css/watch.css
@@ -419,6 +419,7 @@ body {
     background: var(--dark-color);
      width: 100%;
      aspect-ratio: 16/9;
+    height: 80px;
   }
   
   .live-stream {
