--- a/assets/css/watch.css
+++ b/assets/css/watch.css
@@ -418,7 +418,8 @@ body {
     border-radius: 8px;
     background: var(--dark-color);
      width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
   }
   
   .live-stream {
