--- a/assets/css/watch.css
+++ b/assets/css/watch.css
@@ -417,10 +417,12 @@ body {
   .video-container {
     border-radius: 8px;
     background: var(--dark-color);
-     width: 100%;
-    height: 100%;
-    object-fit: cover;
+     width: 100%,
   }
+  body.iframe-mode .watch-container {
+ 
+  max-height: 100%;
+}
   
   .live-stream {
     height: 200px;
