--- a/assets/css/watch.css
+++ b/assets/css/watch.css
@@ -463,7 +463,7 @@ body {
   right: 0;
   bottom: var(--footer-height);
   width: 100%;
-  height: calc(100vh - var(--header-height) - var(--footer-height));
+  height: auto;
   border-radius: 0;
   margin-bottom: 0;
   z-index: 5;
