--- a/assets/css/watch.css
+++ b/assets/css/watch.css
@@ -226,6 +226,15 @@ body {
   margin-bottom: 30px;
   background: #000;
 }
+.video {
+     width: auto;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+    margin-bottom: 30px;
+    background: #000;
+    aspect-ratio: 16/9; /* نسبة جديدة */
+  }
 
 .live-stream {
   width: 100%;
@@ -423,15 +432,7 @@ body {
     background: #000;
     aspect-ratio: 16/9; /* نسبة جديدة */
   }
-  .hls-video {
-     width: 100%;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-    margin-bottom: 30px;
-    background: #000;
-    aspect-ratio: 16/9; /* نسبة جديدة */
-  }
+
     
   
   .live-stream {
