--- a/assets/css/watch.css
+++ b/assets/css/watch.css
@@ -226,8 +226,8 @@ body {
   margin-bottom: 30px;
   background: #000;
 }
-..hls-video {
-     width: auto;
+.hls-video {
+     width: 100%;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
